--- a/MyProject/templates/base.html
+++ b/MyProject/templates/base.html
@@ -118,7 +118,7 @@ const csrf = document.getElementsByName('csrfmiddlewaretoken')[0].value
 const sendSearchData = (name) => {
 	$.ajax({
 			type: 'POST',
-			url:'http://127.0.0.1:8000/s/',
+			url: url+'/s/',
 			data:{
 				'csrfmiddlewaretoken':csrf,
 				'name': name,
@@ -183,13 +183,7 @@ const sendSearchData = (name) => {
 	})
 
 </script>
-<!-- <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br> -->
+
 
 
 	<!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> -->
