--- a/MyProject/templates/cart.html
+++ b/MyProject/templates/cart.html
@@ -165,7 +165,7 @@
   const p = (v) => {
     $.ajax({
         type: 'GET',
-        url:'http://127.0.0.1:8000/'+v,
+        url:'https://foot-loose.herokuapp.com/'+v,
         data:{
 
         },
