--- a/MyProject/templates/base.html
+++ b/MyProject/templates/base.html
@@ -102,7 +102,7 @@
 </div>
 
 <script type="text/javascript">
-const url = window.location.href
+const url = https://foot-loose.herokuapp.com/
 const searchBox = document.getElementById('search-form')
 const bld = document.getElementById('bld')
 const searchInput = document.getElementById('search-input')
