--- a/MyProject/templates/store.html
+++ b/MyProject/templates/store.html
@@ -47,7 +47,7 @@
 <div class="bx3">
   <div class="row">
     <div class="col-lg-6">
-      <a href="{% url 'mp:itempage_pk' pk='nike' %}">
+      <a href="{% url 'mp:itempage_pk' pk=5 %}">
         <img class="thumbnail" src="{% static 'images/2.jpeg' %}">
         <div class="box-element product">
           <h6><strong>Nike Sneakers</strong></h6>
@@ -62,7 +62,7 @@
     </div>
 
     <div class="col-lg-6">
-      <a href="{% url 'mp:itempage_pk' pk='nike' %}">
+      <a href="{% url 'mp:itempage_pk' pk=29 %}">
         <img class="thumbnail" src="{% static 'images/3.jpeg' %}">
         <div class="box-element product">
           <h6><strong>Nike Zoom</strong></h6>
