--- a/MyProject/templates/sports.html
+++ b/MyProject/templates/sports.html
@@ -40,8 +40,10 @@
 
 
         {% endfor %}
+            
+         <div class="text-center">
         {% if products.has_other_pages %}
-  <ul class="pagination mt-5" style="margin-left: 35rem;" >
+  <ul class="pagination mt-5" style="text-align: center;" >
     {% if products.has_previous %}
       <li class="page-item"><a class="page-link" href="?page={{ products.previous_page_number }}">&laquo;</a></li>
     {% else %}
@@ -64,7 +66,7 @@
     {% endif %}
   </ul>
 {% endif %}
-
+    </div>
 
 
         </div>
