--- a/MyProject/templates/base.html
+++ b/MyProject/templates/base.html
@@ -74,7 +74,7 @@
         </li>
       </ul>
 			<div>
-        <form style="margin-right: 70px; overflow:hidden;" id= "search-form" class="form-inline" >
+        <form style="max-width:15rem;hidden;" id= "search-form" class="" >
           {% csrf_token %}
           <input id = "search-input" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         </form>
