--- a/MyProject/templates/sports.html
+++ b/MyProject/templates/sports.html
@@ -7,7 +7,7 @@
     </div>
     <div class="container mt-5">
         <h2 style="color:black;font-family: 'Courier New', monospace;">{{category|capfirst }}</h2>
-        <h3>Puma running shoes gives you the best performance.</h3>
+        <h3 style="margin-top:2rem;">Puma running shoes gives you the best performance.</h3>
     </div>
 
 
