--- a/MyProject/templates/base.html
+++ b/MyProject/templates/base.html
@@ -141,7 +141,7 @@ const sendSearchData = (name) => {
 										<div style="height:auto;font-weight: 100;width:auto;"class = "searchres list-group list-group-flush">
 										<a style="text-decoration: none;"href = "{% url 'mp:itempage' %}${res.pk}" class="item">
 										<div class="col-10 list-group list-group-flush">
-										<h5 style = "color : black;"><img style="width:4rem;height:4rem;margin-right: 2rem;"https://footloose-bucket.s3.amazonaws.com/${r}" alt="oops" class="img-fluid">      ${res.name}</h5>
+										<h5 style = "color : black;"><img style="width:4rem;height:4rem;margin-right: 2rem; src="https://footloose-bucket.s3.amazonaws.com/${r}" alt="oops" class="img-fluid">      ${res.name}</h5>
 										</div>
 										</a>
 										</div>`
