--- a/MyProject/templates/itempage.html
+++ b/MyProject/templates/itempage.html
@@ -202,7 +202,7 @@ const h=(st)=>{
       {% for rec in recommend%}
         {% if rec.pk != product.pk %}
           <a style="text-decoration: none;" href="{% url 'mp:itempage_pk' pk=rec.pk %}"><div class=" card uppercard"style="height:17rem;margin-left: 2rem;">
-            <img style="margin-top:auto;height:15rem;max-width:18rem"src="{{ rec.image.url }}" class="card-img-top" alt="oops">
+            <img style="margin-top:auto;max-height:15rem;max-width:15rem"src="{{ rec.image.url }}" class="card-img-top" alt="oops">
             <h5 style="text-align: center;color: black;margin-left:auto;margin-right: auto;font-family: 'Courier New', monospace;"><strong>{{rec.name|capfirst}}</strong></h5>
           </a>
           </div>
